KIWIS-2588 : fixing sort container on products list page as it was wrapping to next line in mobile view.

--- a/public/less/_products-list.less
+++ b/public/less/_products-list.less
@@ -206,6 +206,7 @@ section .hero-unit{
         margin-left: 10px;
         font-weight: normal;
         background: url('../../img/carrot.svg') no-repeat right @offblack!important;
+        line-height: 1em;
       }
     }
   }
